[gd_scene load_steps=7 format=3 uid="uid://c74wi0fqx48rp"]

[ext_resource type="Script" uid="uid://k4ntejk1ly80" path="res://scripts/cut_test.gd" id="1_pp5k7"]
[ext_resource type="Texture2D" uid="uid://d21gvpnn7y8cr" path="res://gfx/Piece-1.png" id="3_fp3of"]
[ext_resource type="Texture2D" uid="uid://cwdg08w3c60k2" path="res://gfx/Piece-3.png" id="4_1kxhe"]
[ext_resource type="Texture2D" uid="uid://bw670277p501j" path="res://gfx/scissoricon.png" id="5_1kxhe"]
[ext_resource type="Texture2D" uid="uid://bedpko8l1wur2" path="res://gfx/Piece-2.png" id="5_pp5k7"]
[ext_resource type="Texture2D" uid="uid://bko4x5o2vuu47" path="res://gfx/Final-Result.png" id="7_k75w1"]

[node name="CutTest" type="Node2D" node_paths=PackedStringArray("_guide_lines")]
script = ExtResource("1_pp5k7")
_guide_lines = [NodePath("CutLine"), NodePath("CutLine2")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(966, 656)
zoom = Vector2(0.5, 0.5)

[node name="Piece1" type="Sprite2D" parent="."]
texture = ExtResource("3_fp3of")
centered = false

[node name="Piece3" type="Sprite2D" parent="."]
texture = ExtResource("4_1kxhe")
centered = false

[node name="Piece2" type="Sprite2D" parent="."]
texture = ExtResource("5_pp5k7")
centered = false

[node name="CutLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(1132, 144, 1129, 223, 1090, 250, 1050, 272, 1038, 306, 1037, 344, 988, 370, 993, 413, 1008, 458, 1008, 502, 1034, 551, 1062, 602, 1045, 666, 1096, 704, 1101, 779, 1101, 838, 1117, 891, 1118, 944, 1093, 1002, 1055, 1045, 1068, 1109, 1064, 1152, 1057, 1202)
width = 5.0
default_color = Color(1, 0, 1, 1)

[node name="CutLine2" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(1167, 142, 1165, 229, 1263, 289, 1306, 354, 1300, 395, 1243, 423, 1263, 448, 1253, 481, 1222, 496, 1266, 525, 1348, 547, 1348, 578, 1314, 604, 1291, 645, 1290, 721, 1291, 815, 1287, 887, 1271, 960, 1256, 1030, 1275, 1074, 1290, 1137, 1290, 1202)
width = 5.0
default_color = Color(1, 0, 1, 1)

[node name="FinalResult" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("7_k75w1")
centered = false

[node name="Cursor" type="Node2D" parent="."]

[node name="Scissors" type="Sprite2D" parent="Cursor"]
rotation = -2.8274333
scale = Vector2(0.24999999, 0.24999999)
texture = ExtResource("5_1kxhe")
